#send.yaml
appId: org.vechain.veworld.app
env:
  AMOUNT: 0.01
  ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"
onFlowStart:
  - runFlow: ../../setup_reset/setupApp.yaml
onFlowComplete:
  - runFlow: ../../setup_reset/resetApp.yaml
---
## User should be able to send tokens delegating with account method
- tapOn:
    id: "AccountCard_changeAccountButton"
- tapOn: "Account 1"
- tapOn:
    id: "sendButton"
- tapOn: "Vechain"
- tapOn:
    id: "SendScreen_amountInput"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn: "NEXT"
- tapOn: "Account 2"
- tapOn: "NEXT"
- evalScript: ${console.log('NEXT IS OK')}
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "button-ACCOUNT"
      - tapOn:
          text: "Account 2"
          index: 1
      - tapOn:
          id: "confirm-send-button"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
    id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"
- runFlow:
    env:
      AMOUNT: 0.01
    commands:
      - tapOn:
          id: "sendButton"
      - tapOn: "VeThor"
      - tapOn:
          id: "SendScreen_amountInput"
      - inputText: ${AMOUNT}
      - tapOn: "Currency balance"
      - tapOn: "NEXT"
      - tapOn: "Account 2"
      - tapOn: "NEXT"
      - evalScript: ${console.log('NEXT IS OK')}
      - runFlow:
          when:
            visible: "Select delegation"
          commands:
            - tapOn:
                id: "button-ACCOUNT"
            - tapOn:
                text: "Account 2"
                index: 1
            - tapOn:
                id: "confirm-send-button"
      - tapOn:
          id: "BackButtonHeader-BaseIcon-backButton"
      - tapOn:
          id: "confirm-send-button"
      - repeat:
          times: 6
          commands:
            - tapOn: "1"
- evalScript: ${console.log('Delegation account Method complete')}

## User should be able to send custom tokens

- evalScript: ${console.log('Send custom Token Flow starts')}

- tapOn:
    id: "EditTokensBar_BaseIcon_manageToken-wrapper"
- tapOn:
    id: "ManageTokenScreen_AddCustomToken_Button-wrapper"
- tapOn:
    id: "AddCustomTokenBottomSheet-TextInput-Address"
- inputText: "0x8a9844e4750f5ce5f7988c4d1e04c278c718feea"
- tapOn:
    text: "Add"
    index: 1
- assertVisible:
    id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton"
- tapOn: "Send"
- tapOn: "CarpToken"
- tapOn:
    id: "SendScreen_amountInput"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn: "NEXT"
- tapOn: "Account 2"
- tapOn: "NEXT"
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"