appId: org.vechain.veworld.app
tags:
    - pull-request
    - onlyAndroid
onFlowStart:
    - runFlow: ../setup_reset/setupApp.yaml
onFlowComplete:
    - runFlow: ../setup_reset/resetApp.yaml
---
# Test: Mobile QA Automation - Discover section - Verify that VeBetterDAO is listed, accessible and can be connected to wallet
# Ticket: #2778

- tapOn:
      id: "discover-tab"
- runFlow:
      when:
          platform: Android
      commands:
          - tapOn:
                id: "VeBetterDao_banner"
- runFlow:
      when:
          platform: iOS
      commands:
          - tapOn:
                id: "VeBetterDao_banner"
- tapOn:
      text: "Login"
      index: 0
- tapOn: "CONFIRM"
- tapOn: "CONNECT"
- tapOn: "SIGN"
- repeat:
      while:
          visible: "Insert your 6-digit PIN"
      commands:
          - tapOn: "1"
- runFlow:
      when:
          platform: Android
      commands:
          - tapOn:
                id: "URL-bar-back-button-wrapper"
- runFlow:
      when:
          platform: iOS
      commands:
          - tapOn:
                id: "URL-bar-back-button"
- tapOn:
      id: "wallet-tab"
- assertVisible:
      id: "AccountCard_changeAccountButton"
