#send_custom_token_delegation.yaml
appId: org.vechain.veworld.app
env:
  AMOUNT: 0.01
  ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"
  ADDRESS: "0x8a9844e4750f5ce5f7988c4d1e04c278c718feea"
onFlowStart:
  - runFlow: ../../setup_reset/setupApp_ios.yaml
onFlowComplete:
  - runFlow: ../../setup_reset/resetApp_ios.yaml
---
## User should be able to send tokens delegating with account method
- tapOn:
    id: "AccountCard_changeAccountButton"
- tapOn:
    id: "selectAccount"
    index: 0
- tapOn:
    id: "sendButton"
- tapOn: "Vechain VET"
- tapOn:
    id: "SendScreen_amountInput"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn:
    id: "next-button"
- tapOn:
    id: "selectAccount"
    index: 0
- tapOn:
    id: "next-button"
- evalScript: ${console.log('NEXT IS OK')}
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "button-ACCOUNT"
      - tapOn:
          id: "selectAccount"
          index: 0
      - tapOn:
          id: "confirm-send-button"
- assertVisible:
    id: "BackButtonHeader-BaseIcon-backButton-wrapper"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton-wrapper"
- tapOn:
    id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"
- runFlow:
    env:
      AMOUNT: 0.01
    commands:
      - tapOn:
          id: "sendButton"
      - tapOn: "VeThor VTHO"
      - tapOn:
          id: "SendScreen_amountInput"
      - inputText: ${AMOUNT}
      - tapOn: "Currency balance"
      - tapOn:
          id: "next-button"
      - tapOn:
          id: "selectAccount"
          index: 0
      - tapOn:
          id: "next-button"
      - evalScript: ${console.log('NEXT IS OK')}
      - runFlow:
          when:
            visible: "Select delegation"
          commands:
            - tapOn:
                id: "button-ACCOUNT"
            - tapOn:
                id: "selectAccount"
                index: 0
            - tapOn:
                id: "confirm-send-button"
      - assertVisible:
          id: "BackButtonHeader-BaseIcon-backButton-wrapper"
      - tapOn:
          id: "BackButtonHeader-BaseIcon-backButton-wrapper"
      - tapOn:
          id: "confirm-send-button"
      - repeat:
          times: 6
          commands:
            - tapOn: "1"
- evalScript: ${console.log('Delegation account Method complete')}

## User should be able to send custom tokens

- evalScript: ${console.log('Send custom Token Flow starts')}

- tapOn:
    id: "EditTokensBar_BaseIcon_manageToken"
- tapOn:
    id: "ManageTokenScreen_AddCustomToken_Button"
- tapOn:
    id: "AddCustomTokenBottomSheet-TextInput-Address"
- inputText: ${ADDRESS}
- tapOn: "Add"
- assertVisible:
    id: "BackButtonHeader-BaseIcon-backButton-wrapper"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton-wrapper"
- tapOn:
    id: "sendButton"
- tapOn: "CARP CarpToken CARP"
- tapOn:
    id: "SendScreen_amountInput"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn:
    id: "next-button"
- tapOn:
    id: "selectAccount"
    index: 0
- tapOn:
    id: "next-button"
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"