#User creates a observe wallet
appId: org.vechain.veworld.app
---
## User deletes a wallet to observe
- tapOn:
    id: "HomeScreen_WalletManagementButton-wrapper"
- runFlow:
    when:
      platform: Android
    commands:
      - swipe:
         from: 
          id: "DeviceBox"
          index: 1
         direction: "LEFT"
- runFlow:
    when:
      platform: iOS
    commands:
      - swipe:
         from: "Observed Wallet 1 󰲶"
         direction: "LEFT"
- tapOn:
     id: "DeleteUnderlay_DeleteIcon_observable-wrapper"
- assertVisible: "REMOVE WALLET"
- tapOn: "REMOVE WALLET"
- repeat:
    while:
       visible: "Insert your 6-digit PIN"
    commands:
      - tapOn: "1"
- runFlow:
    when:
      platform: Android
    commands:
        - tapOn:
             id: "wallet-tab"
- runFlow:
    when:
      platform: iOS
    commands:
        - tapOn: "REMOVE WALLET"
- runFlow: ../setup_reset/resetApp.yaml